--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/dialogs/ConfirmDeletionDialog.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/dialogs/ConfirmDeletionDialog.mxml
@@ -31,7 +31,7 @@
             {
             	var event:TransportUnitEvent = new TransportUnitEvent(TransportUnitEvent.DELETE_TRANSPORT_UNIT);
             	event.data = deleteLst.dataProvider as ArrayCollection;
-            	event.dispatch();
+            	dispatchEvent(event);
             	closeDialog();
             }
 
