Fixed TransportUnitView to work with Tide
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@881 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationGroupView.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationGroupView.mxml
@@ -32,14 +32,13 @@
     <!-- Scripts -->
     <mx:Script>
         <![CDATA[
+        	import org.openwms.web.flex.client.model.TreeDataDescriptor;
         	import org.openwms.web.flex.client.common.event.LoadLocationGroupsEvent;
             import org.openwms.web.flex.client.event.SwitchScreenEvent;
             import org.openwms.web.flex.client.common.model.CommonModelLocator;
-            import org.openwms.web.flex.client.model.*;
             import org.openwms.common.domain.LocationGroup;
             import org.openwms.web.flex.client.common.event.LocationEvent;
             import mx.collections.ArrayCollection;
-            import mx.events.*;
 
 	        [In]
 	        [Bindable]
